# just-mcp-oauth-proxy-example

./: .env  .env.example  .gitignore  Makefile  README.md  TODO.md  base_tools.py  just-mcp-oauth-proxy(Microsoft Graph format).json  main-patched.py  main-proxy.py  main-self.py  main-unpatched.py  main.py  pyproject.toml  run.sh
docs/: AZURE_SETUP.md  QUICK_START.md
examples/: oauth_client_example.py
scripts/: run_auth_server.py  run_mcp_server.py
src/mcp_oauth_example/: __init__.py  auth.py  auth_server.py  config.py  server.py
tests/: __init__.py  test_auth.py  test_config.py
